syntax = "proto3";
option java_multiple_files = true;
package dakkabi.github;

enum Side {
  ASK = 0;
  BID = 1;
}

message createOrderRequest {
  Side side = 1;
  double price = 2;
  sint64 quantity = 3; // Java long's are 64bit signed integers.
}

message createOrderResponse {
  sint64 id = 1;
}

service OrderService {
  rpc createOrder(createOrderRequest) returns (createOrderResponse);
}